--- a/46_APIWithTokenHomework/Base.lproj/Main.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mhu-bR-04W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-96" y="-618"/>
+            <point key="canvasLocation" x="-96" y="-1434"/>
         </scene>
         <!--iOSDevCourse-->
         <scene sceneID="0b6-l5-8XE">
@@ -321,6 +321,157 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4uM-20-FJZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="694" y="-342"/>
+        </scene>
+        <!--Messages View Controller-->
+        <scene sceneID="xFc-gQ-FLi">
+            <objects>
+                <viewController id="x8N-gB-84b" customClass="ANMessagesViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="53q-jM-bDh"/>
+                        <viewControllerLayoutGuide type="bottom" id="AzR-n6-MTg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3XQ-Po-svZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ckt-Qc-tRx">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="messageSentCell" rowHeight="100" id="Zot-lt-nCa">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zot-lt-nCa" id="RC7-M8-qpo">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I4w-CB-I2g">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="fTj-Td-RoC"/>
+                                                        <constraint firstAttribute="height" constant="50" id="zyi-j1-lPg"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="myFirstName myLastName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ynB-mT-PmE">
+                                                    <rect key="frame" x="66" y="8" width="526" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="07 Feb 2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdz-Zi-qIb">
+                                                    <rect key="frame" x="66" y="37" width="526" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message Sent from me" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TcO-C4-q8y">
+                                                    <rect key="frame" x="8" y="66" width="584" height="25.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ynB-mT-PmE" secondAttribute="trailing" id="7Rd-H7-jWn"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="TcO-C4-q8y" secondAttribute="leading" id="81s-nZ-HWE"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="TcO-C4-q8y" secondAttribute="bottom" id="EFl-ql-SPx"/>
+                                                <constraint firstItem="fdz-Zi-qIb" firstAttribute="leading" secondItem="I4w-CB-I2g" secondAttribute="trailing" constant="8" id="HxK-A7-lls"/>
+                                                <constraint firstItem="TcO-C4-q8y" firstAttribute="top" secondItem="I4w-CB-I2g" secondAttribute="bottom" constant="8" id="MeP-jo-nqo"/>
+                                                <constraint firstItem="TcO-C4-q8y" firstAttribute="top" secondItem="fdz-Zi-qIb" secondAttribute="bottom" constant="8" id="NgB-4t-J4Q"/>
+                                                <constraint firstItem="fdz-Zi-qIb" firstAttribute="top" secondItem="ynB-mT-PmE" secondAttribute="bottom" constant="8" id="RwS-Gr-9rm"/>
+                                                <constraint firstItem="fdz-Zi-qIb" firstAttribute="top" secondItem="RC7-M8-qpo" secondAttribute="topMargin" constant="29" id="Wkv-0b-XTn"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="TcO-C4-q8y" secondAttribute="trailing" id="byj-AJ-a55"/>
+                                                <constraint firstItem="ynB-mT-PmE" firstAttribute="leading" secondItem="I4w-CB-I2g" secondAttribute="trailing" constant="8" id="epO-so-sQI"/>
+                                                <constraint firstItem="fdz-Zi-qIb" firstAttribute="top" secondItem="ynB-mT-PmE" secondAttribute="bottom" constant="8" id="fMQ-Ko-NO9"/>
+                                                <constraint firstAttribute="topMargin" secondItem="I4w-CB-I2g" secondAttribute="top" id="oUT-yU-yP2"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="I4w-CB-I2g" secondAttribute="leading" id="sEu-WT-V1T"/>
+                                                <constraint firstAttribute="topMargin" secondItem="ynB-mT-PmE" secondAttribute="top" id="v3D-so-Wrg"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="fdz-Zi-qIb" secondAttribute="trailing" id="v8F-lU-pUQ"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="Wkv-0b-XTn"/>
+                                                    <exclude reference="fMQ-Ko-NO9"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.73948682565122259" green="0.90842090945247678" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="messageReceivedCell" rowHeight="100" id="7Cz-lA-VUv">
+                                        <rect key="frame" x="0.0" y="128" width="600" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7Cz-lA-VUv" id="wls-4Z-AEU">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S9d-yg-4b1">
+                                                    <rect key="frame" x="542" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="ROT-eI-he7"/>
+                                                        <constraint firstAttribute="height" constant="50" id="kIe-HU-U1p"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="partnerFirstName partnerLastName" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbF-tf-jNy">
+                                                    <rect key="frame" x="8" y="8" width="526" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="07 Feb 2016" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yja-06-Iqy">
+                                                    <rect key="frame" x="8" y="37" width="526" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message Received by me" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fn1-a8-hxe">
+                                                    <rect key="frame" x="8" y="66" width="584" height="25.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="S9d-yg-4b1" secondAttribute="trailing" id="2q3-eL-2wC"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Fn1-a8-hxe" secondAttribute="bottom" id="2t5-uW-F0n"/>
+                                                <constraint firstItem="S9d-yg-4b1" firstAttribute="leading" secondItem="Yja-06-Iqy" secondAttribute="trailing" constant="8" id="3NF-Lq-qYe"/>
+                                                <constraint firstItem="Fn1-a8-hxe" firstAttribute="top" secondItem="S9d-yg-4b1" secondAttribute="bottom" constant="8" id="8ve-EZ-PYD"/>
+                                                <constraint firstItem="Yja-06-Iqy" firstAttribute="top" secondItem="jbF-tf-jNy" secondAttribute="bottom" constant="8" id="Lab-uj-CNh"/>
+                                                <constraint firstItem="Fn1-a8-hxe" firstAttribute="top" secondItem="Yja-06-Iqy" secondAttribute="bottom" constant="8" id="Od2-d7-bqa"/>
+                                                <constraint firstItem="Yja-06-Iqy" firstAttribute="top" secondItem="jbF-tf-jNy" secondAttribute="bottom" constant="8" id="R3o-Vf-SwO"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="Fn1-a8-hxe" secondAttribute="leading" id="e6i-XD-MO4"/>
+                                                <constraint firstItem="S9d-yg-4b1" firstAttribute="leading" secondItem="jbF-tf-jNy" secondAttribute="trailing" constant="8" id="mMW-P5-0IK"/>
+                                                <constraint firstAttribute="topMargin" secondItem="jbF-tf-jNy" secondAttribute="top" id="p1l-rM-Q0N"/>
+                                                <constraint firstItem="Fn1-a8-hxe" firstAttribute="top" secondItem="Yja-06-Iqy" secondAttribute="bottom" constant="8" id="qRL-Kr-ERf"/>
+                                                <constraint firstAttribute="topMargin" secondItem="S9d-yg-4b1" secondAttribute="top" id="rQU-fG-myG"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="Yja-06-Iqy" secondAttribute="leading" id="rVo-mk-bu2"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="jbF-tf-jNy" secondAttribute="leading" id="sBY-By-rcH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Fn1-a8-hxe" secondAttribute="trailing" id="uah-FD-hWj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.70528100846107966" green="1" blue="0.6874355483665997" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="x8N-gB-84b" id="qhG-dx-d59"/>
+                                    <outlet property="delegate" destination="x8N-gB-84b" id="AqX-wR-r26"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Ckt-Qc-tRx" secondAttribute="trailing" id="1Yb-0F-Ubk"/>
+                            <constraint firstItem="Ckt-Qc-tRx" firstAttribute="leading" secondItem="3XQ-Po-svZ" secondAttribute="leading" id="7wj-DS-cM1"/>
+                            <constraint firstItem="Ckt-Qc-tRx" firstAttribute="top" secondItem="3XQ-Po-svZ" secondAttribute="top" id="L96-AC-8VN"/>
+                            <constraint firstItem="AzR-n6-MTg" firstAttribute="top" secondItem="Ckt-Qc-tRx" secondAttribute="bottom" id="bvF-12-kv1"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Ckt-Qc-tRx" id="IUk-cU-8ea"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zRY-pw-Kdr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-96" y="-675"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MSa-Qm-GZ5">
